--- a/package.json
+++ b/package.json
@@ -16,25 +16,30 @@
     "webpack"
   ],
   "scripts": {
-    "dev:docgen": "./generate.js",
-    "dev:styles": "webpack --progress --colors --watch --env dev"
+    "dev": "webpack --config ./webpack.dev.js --progress --colors --watch",
+    "test": "jest --config jest.config.js",
+    "build": "webpack --config ./webpack.dev.js",
+    "build:min": "webpack --config ./webpack.prod.js",
+    "dist": "npm t; rm -rf ./dist/*; npm run build && npm run build:min"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^4.6.1",
+    "preact-render-spy": "^1.2.2",
+    "eslint": "^4.19.1",
     "eslint-loader": "^1.9.0",
-    "webpack": "^3.5.5",
+    "jest-cli": "^21.0.2",
+    "webpack": "^3.11.0",
+    "webpack-merge": "^4.1.1",
     "yargs": "^8.0.2"
   },
   "dependencies": {
-    "fs-path": "0.0.23",
-    "hogan.js": "^3.0.2",
-    "remarkable": "^1.7.1",
-    "walk": "^2.3.9"
+    "preact": "^8.2.7"
   }
 }
